[metadata]
name = Stylehandler
description = An easy way to style your Tkinter widgets
long_description = file: README.md
long_description_content_type = text/markdown
version = 0.0.1
author = WiseNat
author_email = nathan88wise@gmail.com
url = https://github.com/WiseNat/StyleHandler
project_urls =
    Source Code =  https://github.com/WiseNat/StyleHandler
    Documentation =  https://github.com/WiseNat/StyleHandler
    Bug Tracker = https://github.com/WiseNat/StyleHandler/issues
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
keywords = Tkinter

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src